docs/release-notes/6.1.0/upgrade-guide.mdx
---
id: 1854f256
title: Upgrade from 6.0.x to 6.1.0
description: Learn how to upgrade Webiny from 6.0.x to 6.1.0.
---

import { Alert } from "@/components/Alert";
import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";

<Alert type="success" title="What you’ll learn">

- how to upgrade Webiny from 6.0.x to 6.1.0

</Alert>

<Alert type="info">

Make sure to check out the [6.1.0 changelog](./changelog) to get familiar with the changes introduced in this release.

</Alert>

## Step-by-Step Guide

### 1. Upgrade Webiny Packages

Upgrade all Webiny packages by running the following command:

```bash
npx https://github.com/webiny/webiny-upgrades-v6 6.1.0
```

Note that the command above will run upgrades for all available versions of Webiny up to 6.1.0. If there are upgrades for 6.0.1, 6.0.5, they will be ran.

You can omit the version to upgrade to the latest available:

```bash
npx https://github.com/webiny/webiny-upgrades-v6
```

Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **6.1.0**.

<Alert type="info">

  Starting with 6.1.0, upgrade will be ran with `yarn webiny upgrade` command.
  Current npx command is a temporary solution until the new command is available.

</Alert>

### 2. Deploy Your Project

Proceed by redeploying your Webiny project:

```bash
# Execute in your project root.
yarn webiny deploy --env {environment}
```

<AdditionalNotes />
